--- a/style.css
+++ b/style.css
@@ -1,8 +1,14 @@
-.AboutsectionsBackground {
+.Aboutsections {
   width: 100%;
   height: 100vh;
   background-color: #302e2e;
 }
+/* .Aboutsections h1 {
+  font-size: 90px;
+}
+.Aboutsections h6 {
+  font-size: 40px;
+} */
 .workSectionsBackground {
   width: 100%;
   height: 100vh;
